--- a/pages/tools.html
+++ b/pages/tools.html
@@ -46,33 +46,33 @@
   <a class="social-btn" href="https://spikysaurus.github.io/pages/XDTS-Editor">
   <span class="bl-icons-url"></span>‎
     <h1>XDTS Editor</h1>
-    <h3>TimeSheet Editor (stable) </h3>
+    <h3>TimeSheet Editor</h3>
   </a>
   
   <a class="social-btn" href="https://spikysaurus.github.io/pages/WebRef">
   <span class="bl-icons-url"></span>‎
     <h1>WebRef</h1>
-    <h3>Reference Image Board (stable) </h3>
+    <h3>Reference Image Board</h3>
   </a>
   
   <a class="social-btn" href="https://spikysaurus.github.io/pages/VideoFBF">
   <span class="bl-icons-url"></span>‎
-    <h1>VideoFBF</h1><h3>Frame by Frame Video Player (stable)</h3>
+    <h1>VideoFBF</h1><h3>Frame by Frame Video Player</h3>
   </a>
   
   <a class="social-btn" href="https://spikysaurus.github.io/pages/ImageSequenceDeduplicator">
   <span class="bl-icons-url"></span>‎
-    <h1>Image Sequence Deduplicator </h1><h3>(stable)</h3>
+    <h1>Image Sequence Deduplicator </h1><h3></h3>
   </a>
   
   <a class="social-btn" href="https://spikysaurus.github.io/pages/Kertas">
-  <span class="bl-icons-error"></span>‎
-    <h1>Kertas</h1><h3>Sketching App (experimental)</h3>
+  <span class="bl-icons-url"></span>‎
+    <h1>Kertas</h1><h3>Animation Tool</h3>
   </a>
   
   <a class="social-btn" href="https://spikysaurus.github.io/pages/Animasikan">
   <span class="bl-icons-error"></span>‎
-    <h1>Animasikan</h1><h3>Stopmotion App (experimental)</h3>
+    <h1>Animasikan</h1><h3>Stopmotion Tool (experimental)</h3>
   </a>
   
   
