--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -182,9 +182,9 @@
 				   
                   <div class="controls">
 					 <div id="tabFileTree" class="tabcontent">
-						 <button id="saveZipBtn">Save Assets</button>
-						 <button id="loadZipBtn">Load Assets</button>
-						 <input type="file" id="zipInput" accept=".zip" style="display:none">
+						 <button id="loadAssetsBtn">Load Assets</button>
+						 <button id="saveAssetsBtn">Save Assets</button>
+						 <input type="file" id="assetsInput" accept=".zip" style="display:none">
 						 <button id="loadBackdropBtn">Import Backdrop</button>
 						 <input type="file" id="backdropInput" accept="image/*" style="display:none">
 					</div>
