--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="UTF-8">
-      <title>Kertas (2026-02-23)</title>
+      <title>Kertas (2026-02-24)</title>
       <meta property="og:title" content="Zettai Absolute" />
       <meta property="og:image" content="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreicazv32xvsf4lhsfhjzpej6k3n3t23ppjjaxcalnquewonbw6dpq4@jpeg" />
       <meta property="og:description" content="A simple animation web app." />
@@ -217,6 +217,7 @@
 					<label><b>-- Active Tool : </b></label><label id="activeToolLabel"></label>
 					<label><b>-- Brush Size (bracket) : </b></label><label id="brushSizeLabel"></label>
 					<label><b>-- Eraser Size (ctrl+bracket) : </b></label><label id="eraserSizeLabel"></label>
+					<label style="color:blue;">-- Swap Colors (v)</label>
 					<label><b>-- Brush Aliasing (a) : </b></label><label id="aliasingLabel"></label>
 					<label><b>-- Draw Behind (b) : </b></label><label id="drawBehindLabel"></label>
 					<label><b>-- Pixelated Canvas (r) : </b></label><label id="imageRenderingLabel"></label>
