--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -3,9 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <title>Kertas</title>
-      <meta property="og:title" content="Zettai Absolute" />
-      <meta property="og:image" content="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreicazv32xvsf4lhsfhjzpej6k3n3t23ppjjaxcalnquewonbw6dpq4@jpeg" />
-      <meta property="og:description" content="A simple animation web app." />
+      <meta property="og:title" content="Kertas" />
+      <meta property="og:description" content="Animation tool" />
       <link rel="icon" href="assets/images/icon.png" type="image/x-icon">
       <link rel="stylesheet" href="assets/bl-icons/bl-icons.css">
       <link rel="stylesheet" href="assets/main/css/area.css">
