--- a/pages/tools.html
+++ b/pages/tools.html
@@ -29,12 +29,12 @@
   <a class="social-btn" href="https://sadewoo.gumroad.com/l/SakugaGP">
     <span class="bl-icons-blender"></span>‎
     <h1>SakugaGP</h1>
-    <h3>Grease Pencil Addon</h3>
+    <h3>Grease Pencil Addon (Blender v5.0)</h3>
   </a>
   
   <a class="social-btn" href="https://github.com/spikysaurus/Blender-Compositing-Presets">
      <span class="bl-icons-blender"></span>‎
-    <h1>Anime Compositing Presets</h1>
+    <h1>Anime Compositing Presets </h1><h3>(Blender v5.0)</h3>
   </a>
   
   <a class="social-btn" href="https://github.com/spikysaurus/KRITA-SakugaKR">
@@ -43,36 +43,36 @@
     <h3>Krita Plugin</h3>
   </a> 
   
-  <a class="social-btn" href="XDTS-Editor/index.html">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/XDTS-Editor">
   <span class="bl-icons-url"></span>‎
     <h1>XDTS Editor</h1>
     <h3>TimeSheet Editor</h3>
   </a>
   
-  <a class="social-btn" href="WebRef/index.html">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/WebRef">
   <span class="bl-icons-url"></span>‎
     <h1>WebRef</h1>
     <h3>Reference Image Board</h3>
   </a>
   
-  <a class="social-btn" href="VideoFBF/index.html">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/VideoFBF">
   <span class="bl-icons-url"></span>‎
     <h1>VideoFBF</h1><h3>Frame by Frame Video Player</h3>
   </a>
   
-  <a class="social-btn" href="ImageSequenceDeduplicator/index.html">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/ImageSequenceDeduplicator">
   <span class="bl-icons-url"></span>‎
-    <h1>Image Sequence Deduplicator</h1>
+    <h1>Image Sequence Deduplicator </h1><h3></h3>
   </a>
   
-  <a class="social-btn" href="Kertas/index.html">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/Kertas">
   <span class="bl-icons-url"></span>‎
-    <h1>Kertas</h1><h3>Sketching App</h3>
+    <h1>Kertas</h1><h3>Animation Tool</h3>
   </a>
   
-  <a class="social-btn" href="Animasikan/index.html">
-  <span class="bl-icons-url"></span>‎
-    <h1>Animasikan</h1><h3>Stopmotion App</h3>
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/Animasikan">
+  <span class="bl-icons-error"></span>‎
+    <h1>Animasikan</h1><h3>Stopmotion Tool (experimental)</h3>
   </a>
   
   
