--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -213,7 +213,7 @@
 					<li><b>Pixelated Canvas (R) : </b></label><label id="imageRenderingLabel"></li>
 					<li style="color:blue;">Pan (hold Space + LMB Drag)</label>
 					<li style="color:blue;">Zoom (hold Z + LMB Drag Up/Down)</label>
-					<li style="color:blue;">Backdrop Opacity (Shift+bBacket)</li>
+					<li style="color:blue;">Backdrop Opacity (Shift+Bracket)</li>
 					<li style="color:blue;">Reset Backdrop Opacity (\)</label>
 					<li style="color:blue;">Backdrop Opacity to Zero (Shift+\)</li>
 					<li style="color:red;">Speedlines (shift+p)</li>
