--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -213,9 +213,12 @@
 					<li><b>Pixelated Canvas (R) : </b></label><label id="imageRenderingLabel"></li>
 					<li style="color:blue;">Pan (hold Space + LMB Drag)</label>
 					<li style="color:blue;">Zoom (hold Z + LMB Drag Up/Down)</label>
-					<li style="color:blue;">Backdrop Opacity (Shift+Bracket)</li>
-					<li style="color:blue;">Reset Backdrop Opacity (\)</label>
-					<li style="color:blue;">Backdrop Opacity to Zero (Shift+\)</li>
+					<li style="color:red;">FlipH (/)</label>
+					<li style="color:red;">FlipV (Shift+/)</label>
+					<li style="color:red;">Reset View (0)</label>
+					<li style="color:gray;">Backdrop Opacity (Shift+Bracket)</li>
+					<li style="color:gray;">Reset Backdrop Opacity (\)</label>
+					<li style="color:gray;">Backdrop Opacity to Zero (Shift+\)</li>
 					<li style="color:red;">Speedlines (shift+p)</li>
 					<li>Ctrl+LMB on the cell to edit their values</li>
 					<li>Ctrl+LMB on the level name to edit their name</li>
