--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -93,6 +93,10 @@
 <script src="assets/main/js/Ui/tooltips.js"></script>
 <script src="assets/main/js/Ui/debug.js"></script>
 
+<!-- 8. Render & Export -->
+<script src="assets/main/js/Flipbook/flipbookBtn.js"></script>
+<script src="assets/main/js/Flipbook/flipbookPage.js"></script>
+
 
 </body>
 </html>
