--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -58,8 +58,12 @@
 <script src="assets/main/js/Xsheet/xsheetResetVariables.js"></script>
 <script src="assets/main/js/Xsheet/xsheetUpdateVariables.js"></script>
 
-<!-- 3. Core Engine (Canvas & Assets) -->
+<!-- Canvas & Assets -->
 <script src="assets/main/js/Canvas/canvas.js"></script>
+<script src="assets/main/js/Canvas/canvasResizeHandles.js"></script>
+<script src="assets/main/js/Canvas/toolFill.js"></script>
+<script src="assets/main/js/Canvas/toolLassoFill.js"></script>
+<script src="assets/main/js/Canvas/toolLassoSelect.js"></script>
 <script src="assets/main/js/Assets/levelAndDrawings.js"></script>
 
 <!-- 4. THE BRIDGES (Must be loaded BEFORE Rendering/Loading logic) -->
