--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -13,6 +13,8 @@
       <link rel="stylesheet" href="assets/main/css/xsheet.css">
       <link rel="stylesheet" href="assets/main/css/assets.css">
       <link rel="stylesheet" href="assets/main/css/canvas.css">
+      <link rel="stylesheet" href="assets/main/css/toolbox.css">
+      <link rel="stylesheet" href="assets/main/css/colorPicker.css">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       
       
@@ -44,7 +46,11 @@
     <div class="snap-area vertical collapsed dropZoneTree" id="a-right" data-last="250px"><div class="tab-strip"></div></div>
 </div>
 
+
 <script src="assets/main/js/Ui/ui_main.js"></script>
+<script src="assets/main/js/Windows/colorPicker.js"></script>
+<script src="assets/main/js/Windows/toolbox.js"></script>
+
 <script src="assets/js/jszip.min.js"></script>
 <script src="assets/js/FileSaver.min.js"></script>
 
@@ -72,8 +78,7 @@
 <script src="assets/main/js/Xsheet/xs_loadSave.js"></script>
 <script src="assets/main/js/Assets/assetsLoadSave.js"></script>
 
-<script src="assets/main/js/Canvas/toolbox.js"></script>
-<script src="assets/main/js/Canvas/colorPicker.js"></script>
+
 
 <script src="assets/main/js/Ui/ui_splashScreen.js"></script>
 <script src="assets/main/js/Ui/ui_preventDefaults.js"></script>
