--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -74,6 +74,9 @@
 <script src="assets/main/js/Xsheet/xs_adjustDuration.js"></script>
 <script src="assets/main/js/Xsheet/xs_editTrack.js"></script>
 
+<!--
+<script src="assets/main/js/Xsheet/xs_toggleOrientation.js"></script>
+-->
 <script src="assets/main/js/Xsheet/xs_rendering.js"></script>
 <script src="assets/main/js/Xsheet/xs_loadSave.js"></script>
 <script src="assets/main/js/Assets/assetsLoadSave.js"></script>
