--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -61,6 +61,7 @@
 <script src="assets/main/js/Canvas/canvas.js"></script>
 <script src="assets/main/js/Canvas/canvasResizeHandles.js"></script>
 <script src="assets/main/js/Canvas/toolEventsShortcuts.js"></script>
+<script src="assets/main/js/Canvas/toolCamera.js"></script>
 <script src="assets/main/js/Canvas/toolBrushEraser.js"></script>
 <script src="assets/main/js/Canvas/toolRectangle.js"></script>
 <script src="assets/main/js/Canvas/toolFill.js"></script>
@@ -97,6 +98,8 @@
 <script src="assets/main/js/Flipbook/flipbookPage.js"></script>
 <script src="assets/main/js/Xsheet/xs_playbackManager.js"></script>
 
+<script src="assets/main/js/Camera/camera.js"></script>
+<script src="assets/main/js/Camera/cameraManager.js"></script>
 
 </body>
 </html>
