--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -24,7 +24,7 @@
 <div id="ctrl-indicator" style="display:none;">DOCKING MODE</div>
 
 <div id="viewport">
-    <div class="snap-area vertical collapsed dropZone" id="a-left" data-last="220px"><div class="tab-strip"></div></div>
+    <div class="snap-area vertical collapsed" id="a-left" data-last="220px"><div class="tab-strip"></div></div>
     <div class="resizer resizer-v" data-target="a-left" data-dir="right"></div>
 
     <div id="center-stack">
@@ -45,7 +45,7 @@
     </div>
 
     <div class="resizer resizer-v" data-target="a-right" data-dir="left"></div>
-    <div class="snap-area vertical collapsed dropZoneTree" id="a-right" data-last="220px"><div class="tab-strip"></div></div>
+    <div class="snap-area vertical collapsed" id="a-right" data-last="220px"><div class="tab-strip"></div></div>
 </div>
 
 
